--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
 
   <!-- HTML -->
-<div class="flex">
+<div class="clearfix">
   <div class="red--box"></div>
 </div>
   <div class="green--box"></div>
