--- a/index.html
+++ b/index.html
@@ -4,13 +4,14 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
-  <link rel="stylesheet" href="./css/style.CSS">
+  <link rel="stylesheet" href="./CSS/style.css">
 </head>
 <body>
 
   <!-- HTML -->
-<div class="clearfix">
   <div class="red--box"></div>
+<div class="clearfix">
+ 
   <div class="green--box"></div>
   <div class="blue--box"></div>
 </div>
